[workspace]
# Keep members in alphabetical order so new PRs add in the same place (reduces merge conflicts).
# When adding a new crate, complete the security checklist in docs/security-checklist.md first.
members = [
    "contracts/aggregated-attestations",
    "contracts/attestation",
    "contracts/attestation-registry",
    "contracts/attestation-snapshot",
    "contracts/attestor-staking",
    "contracts/audit-log",
    "contracts/business-config",
    "contracts/common",
    "contracts/integration-registry",
    "contracts/lender-access-list",
    "contracts/lender-consumer",
    "contracts/network-config",
    "contracts/protocol-dao",
    "contracts/protocol-simulation",
    "contracts/revenue-bonds",
    "contracts/revenue-curve",
    "contracts/revenue-settlement",
    "contracts/revenue-share",
    "contracts/revenue-stream",
]
resolver = "2"

# ---------------------------------------------------------------------------
# Workspace-level metadata — referenced by CI and tooling.
# ---------------------------------------------------------------------------
[workspace.metadata.security]
# Minimum required test coverage percentage for all crates in this workspace.
# Gaps must be justified with a RISK-ACCEPT comment in the relevant source file.
min_coverage_pct = 95

# Canonical checklist document for authors adding new contract crates.
checklist = "docs/security-checklist.md"

# Invariant reference document: one SI-XXX entry per enforced security property.
invariants = "docs/security-invariants.md"

# Cross-contract modules that must not be broken by new crates.
# Validate with: cargo test --workspace
protected_modules = [
    "contracts/attestation-registry",
    "contracts/attestor-staking",
    "contracts/revenue-share",
    "contracts/revenue-settlement",
    "contracts/revenue-bonds",
]

# ---------------------------------------------------------------------------
# Workspace lint configuration (applies to all crates unless overridden).
# ---------------------------------------------------------------------------
[workspace.lints.rust]
# Treat missing docs on public items as a warning; new crates should aim for
# zero warnings before merging.
missing_docs = "warn"

[workspace.lints.clippy]
# Disallow integer arithmetic that can silently overflow in debug builds when
# overflow-checks is false (belt-and-suspenders alongside profile setting).
arithmetic_side_effects = "warn"
# Catch unbounded collection growth patterns early.
all = "warn"

# ---------------------------------------------------------------------------
# Release profile — shared across all workspace crates.
# DO NOT override in individual crates without an explicit written rationale.
# ---------------------------------------------------------------------------
[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true
