[package]
name = "deployment-validator"
version = "0.1.0"
edition = "2021"
description = "Validates critical environment variables for Veritasor Contracts deployment"

[[bin]]
name = "deployment-validator"
path = "src/main.rs"

[dependencies]
soroban-sdk = "22.0"
clap = { version = "4.5", features = ["derive"] }
dotenvy = "0.15"
regex = "1.10"
base64 = "0.22"
thiserror = "1.0"
env_logger = "0.11"
log = "0.4"
url = { version = "2.5", features = ["serde"] }
stellar-xdr = "22.0"

[dev-dependencies]
tempfile = "3.10"

